--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
   "git.autofetch": true,
   "gitdoc.autoCommitDelay": 60000,
   "gitdoc.commitMessageFormat": "ccc, LLL d, y, h:mm a '+00:00'",
-  "gitdoc.commitOnClose": true,
-  "editor.formatOnSave": true
+  "gitdoc.commitOnClose": true
+  // "editor.formatOnSave": true
 }
