Wed, Feb 7, 2024, 4:34 PM +00:00

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,32 +1,48 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/docker-in-docker
 {
-  "name": "C# (.NET)",
-  "image": "mcr.microsoft.com/devcontainers/dotnet:1-8.0-bookworm",
-  "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {
-      "moby": true,
-      "azureDnsAutoDetection": true,
-      "installDockerBuildx": true,
-      "version": "latest",
-      "dockerDashComposeVersion": "none"
-    }
-  },
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "GitHub.copilot",
-        "GitHub.copilot-chat",
-        "GitHub.codespaces",
-        "vsls-contrib.gitdoc",
-        "ms-vscode-remote.remote-containers",
-        "ms-dotnettools.csdevkit",
-        "kreativ-software.csharpextensions",
-        "jorgeserrano.vscode-csharp-snippets",
-        "vain0x.csharp-gen-ctor",
-        "afmicc.GetterAndSetterGenerator",
-        "EditorConfig.EditorConfig",
-        "DavidAnson.vscode-markdownlint",
-        "streetsidesoftware.code-spell-checker"
-      ]
-    }
-  }
+	"name": "Docker in Docker",
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"image": "mcr.microsoft.com/devcontainers/base:bullseye",
+
+	"features": {
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"version": "latest",
+			"enableNonRootDocker": "true",
+			"moby": "true"
+		}
+	},
+
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
+	// Use 'postCreateCommand' to run commands after the container is created.
+	// "postCreateCommand": "docker --version",
+
+	// Configure tool-specific properties.
+	"customizations": {
+        "vscode": {
+          "extensions": [
+            "GitHub.copilot",
+            "vsls-contrib.gitdoc",
+            "CrappyCodeMaker.ccm-plsql-oracle",
+            "EwanDubashinski.plsqllint",
+            "Oracle.oracledevtools",
+            "Oracle.sql-developer",
+            "adpyke.vscode-sql-formatter",
+            "apng.orclapex-autocomplete",
+            "casian.plsql",
+            "mycelo.oracle-plsql",
+            "xyz.plsql-language",
+            "streetsidesoftware.code-spell-checker",
+            "EditorConfig.EditorConfig",
+            "DavidAnson.vscode-markdownlint",
+            "inferrinizzard.prettier-sql-vscode",
+            "markdownlint.markdownlint"
+          ]
+        }
+      }
+
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
